refactor: Stabilize build and synchronize application layers
This commit resolves a cascade of over 90 compilation errors and numerous test failures, bringing the project to a stable, compiling, and testable state.

Key architectural and stability improvements include:
- Synchronized DTOs, Entities, and Mappers: Aligned all Data Transfer Objects (NewsDto, RoleDto, etc.) with their corresponding entities and MapStruct mappers, resolving contract mismatches.
- Corrected Repository Layer: Fixed invalid JPA derived query method names in NewsRepository (e.g., 'findByTerms_Id...'). Added missing query methods to RoleRepository required by the service layer.
- Aligned Service and Controller Layers: Standardized method signatures, parameters, and return types across all services and controllers, ensuring a consistent API contract.
- Stabilized Test Suite: Updated the entire test suite to use the correct DTO constructors, service methods, and entity fields. Fixed mock setups and assertions in unit and integration tests.
- Enforced Code Quality: Resolved all Checkstyle violations, primarily related to line length, to maintain code readability and adhere to project standards.

This foundational work eliminates critical build-breaking issues and establishes a consistent architecture, enabling reliable testing and further development.