@@ -4,7 +4,6 @@ import com.example.newsplatform.dto.request.BulkActionRequestDto;
 import com.example.newsplatform.mapper.NewsMapper;
 import com.example.newsplatform.repository.NewsRepository;
 import com.example.newsplatform.repository.UserRepository;
-import com.example.newsplatform.security.RoleConstants;
 import com.example.newsplatform.service.impl.NewsServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -12,9 +11,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.access.AccessDeniedException;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Arrays;
 import java.util.HashSet;
@@ -24,22 +21,15 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-/**
- * Unit tests for bulk operations functionality.
- * Tests role-based access control and bulk operation restrictions.
- */
 @ExtendWith(MockitoExtension.class)
 class BulkOperationsTest {
 
     @Mock
     private NewsRepository newsRepository;
-
     @Mock
     private UserRepository userRepository;
-
     @Mock
     private NewsMapper newsMapper;
-
     @Mock
     private Authentication authentication;
 
@@ -47,54 +37,28 @@ class BulkOperationsTest {
 
     @BeforeEach
     void setUp() {
-        newsService = new NewsServiceImpl(newsRepository, userRepository, newsMapper);
-    }
-
-    private Authentication createAdminAuthentication() {
-        return new UsernamePasswordAuthenticationToken(
-                "admin",
-                "password",
-                List.of(new SimpleGrantedAuthority(RoleConstants.ROLE_ADMIN))
-        );
-    }
-
-    private Authentication createEditorAuthentication() {
-        return new UsernamePasswordAuthenticationToken(
-                "editor",
-                "password",
-                List.of(new SimpleGrantedAuthority(RoleConstants.ROLE_EDITOR))
-        );
-    }
-
-    private Authentication createUserAuthentication() {
-        return new UsernamePasswordAuthenticationToken(
-                "user",
-                "password",
-                List.of(new SimpleGrantedAuthority("ROLE_USER"))
-        );
+        newsService = spy(new NewsServiceImpl(newsRepository, userRepository, newsMapper));
     }
 
     @Test
     void performBulkAction_AdminRole_ShouldAllowBulkDelete() {
         // Given
-        Authentication adminAuth = createAdminAuthentication();
-
+        doReturn(true).when(newsService).hasRole(authentication, "ADMIN");
         BulkActionRequestDto request = new BulkActionRequestDto();
         request.setAction(BulkActionRequestDto.ActionType.DELETE);
         request.setFilterType(BulkActionRequestDto.FilterType.BY_IDS);
         request.setItemIds(new HashSet<>(Arrays.asList(1L, 2L, 3L)));
         request.setConfirmed(true);
 
-        // When & Then - No exception should be thrown for ADMIN
-        assertDoesNotThrow(() -> newsService.performBulkAction(request, adminAuth));
-        verify(newsRepository).deleteAllById(Arrays.asList(1L, 2L, 3L));
+        // When & Then
+        assertDoesNotThrow(() -> newsService.performBulkAction(request, authentication));
+        verify(newsRepository).deleteAllById(List.of(1L, 2L, 3L));
     }
 
     @Test
     void performBulkAction_AdminRole_ShouldAllowBulkUnpublish() {
         // Given
-        Authentication adminAuth = createAdminAuthentication();
-
+        doReturn(true).when(newsService).hasRole(authentication, "ADMIN");
         BulkActionRequestDto request = new BulkActionRequestDto();
         request.setAction(BulkActionRequestDto.ActionType.UNPUBLISH);
         request.setFilterType(BulkActionRequestDto.FilterType.BY_IDS);
@@ -102,15 +66,14 @@ class BulkOperationsTest {
         request.setConfirmed(true);
 
         // When & Then
-        assertDoesNotThrow(() -> newsService.performBulkAction(request, adminAuth));
-        verify(newsRepository).unpublishByIds(Arrays.asList(1L, 2L, 3L));
+        assertDoesNotThrow(() -> newsService.performBulkAction(request, authentication));
+        verify(newsRepository).unpublishByIds(List.of(1L, 2L, 3L));
     }
 
     @Test
     void performBulkAction_EditorRole_ShouldDenyBulkOperations() {
         // Given
-        Authentication editorAuth = createEditorAuthentication();
-
+        doReturn(false).when(newsService).hasRole(authentication, "ADMIN");
         BulkActionRequestDto request = new BulkActionRequestDto();
         request.setAction(BulkActionRequestDto.ActionType.DELETE);
         request.setFilterType(BulkActionRequestDto.FilterType.BY_IDS);
@@ -118,68 +81,33 @@ class BulkOperationsTest {
         request.setConfirmed(true);
 
         // When & Then
-        AccessDeniedException exception = assertThrows(AccessDeniedException.class,
-                () -> newsService.performBulkAction(request, editorAuth));
-
-        assertEquals("Access is denied", exception.getMessage());
+        assertThrows(AccessDeniedException.class, () -> newsService.performBulkAction(request, authentication));
         verify(newsRepository, never()).deleteAllById(any());
-        verify(newsRepository, never()).unpublishByIds(any());
     }
 
     @Test
     void performBulkAction_UserRole_ShouldDenyBulkOperations() {
         // Given
-        Authentication userAuth = createUserAuthentication();
-
+        doReturn(false).when(newsService).hasRole(authentication, "ADMIN");
         BulkActionRequestDto request = new BulkActionRequestDto();
-        request.setAction(BulkActionRequestDto.ActionType.DELETE);
-        request.setFilterType(BulkActionRequestDto.FilterType.BY_IDS);
-        request.setItemIds(new HashSet<>(Arrays.asList(1L, 2L, 3L)));
+        request.setAction(BulkActionRequestDto.ActionType.UNPUBLISH);
+        request.setFilterType(BulkActionRequestDto.FilterType.ALL);
         request.setConfirmed(true);
 
         // When & Then
-        AccessDeniedException exception = assertThrows(AccessDeniedException.class,
-                () -> newsService.performBulkAction(request, userAuth));
-
-        assertEquals("Access is denied", exception.getMessage());
-        verify(newsRepository, never()).deleteAllById(any());
+        assertThrows(AccessDeniedException.class, () -> newsService.performBulkAction(request, authentication));
+        verify(newsRepository, never()).unpublishByIds(any());
     }
 
     @Test
     void performBulkAction_UnconfirmedRequest_ShouldThrowException() {
         // Given
-        Authentication adminAuth = createAdminAuthentication();
-
+        doReturn(true).when(newsService).hasRole(authentication, "ADMIN");
         BulkActionRequestDto request = new BulkActionRequestDto();
         request.setAction(BulkActionRequestDto.ActionType.DELETE);
-        request.setFilterType(BulkActionRequestDto.FilterType.BY_IDS);
-        request.setItemIds(new HashSet<>(Arrays.asList(1L, 2L, 3L)));
-        request.setConfirmed(false); // Not confirmed
+        request.setConfirmed(false);
 
         // When & Then
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class,
-                () -> newsService.performBulkAction(request, adminAuth));
-
-        assertEquals("Bulk operation must be confirmed", exception.getMessage());
-        verify(newsRepository, never()).deleteAllById(any());
-    }
-
-    @Test
-    void performBulkAction_EmptyTargetIds_ShouldNotCallRepository() {
-        // Given
-        Authentication adminAuth = createAdminAuthentication();
-
-        BulkActionRequestDto request = new BulkActionRequestDto();
-        request.setAction(BulkActionRequestDto.ActionType.DELETE);
-        request.setFilterType(BulkActionRequestDto.FilterType.BY_IDS);
-        request.setItemIds(new HashSet<>()); // Empty set
-        request.setConfirmed(true);
-
-        // When
-        newsService.performBulkAction(request, adminAuth);
-
-        // Then
-        verify(newsRepository, never()).deleteAllById(any());
-        verify(newsRepository, never()).unpublishByIds(any());
+        assertThrows(IllegalArgumentException.class, () -> newsService.performBulkAction(request, authentication));
     }
 }
